--- a/ButiRenderingTest/ButiRenderingTest.vcxproj
+++ b/ButiRenderingTest/ButiRenderingTest.vcxproj
@@ -23,7 +23,7 @@
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{6e28d42d-47f6-4cfb-93a0-ea9b261a6274}</ProjectGuid>
     <RootNamespace>ButiRenderingTest</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.19041.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -120,11 +120,14 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(ProjectDir)..\..\;$(ProjectDir)</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp17</LanguageStandard>
+      <LanguageStandard_C>stdc17</LanguageStandard_C>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>$(SolutionDir)\..\..\dll\$(Configuration)\ButiMemorySystem.lib;$(SolutionDir)\..\..\dll\$(Configuration)\ZDll.lib;$(SolutionDir)\..\..\lib\$(Configuration)\ButiUtil.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(SolutionDir)\..\..\dll\$(Configuration)\ButiMemorySystem.lib;$(SolutionDir)\..\..\dll\$(Configuration)\ZDll.lib;$(SolutionDir)\..\..\lib\$(Configuration)\ButiUtil.lib;$(SolutionDir)Libs\dll\$(Configuration)\ButiRendering.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -135,22 +138,24 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
+      <LanguageStandard_C>stdc17</LanguageStandard_C>
+      <AdditionalIncludeDirectories>$(ProjectDir)..\..\;$(ProjectDir)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>$(SolutionDir)\..\..\dll\$(Configuration)\ButiMemorySystem.lib;$(SolutionDir)\..\..\dll\$(Configuration)\ZDll.lib;$(SolutionDir)\..\..\lib\$(Configuration)\ButiUtil.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(SolutionDir)\..\..\dll\$(Configuration)\ButiMemorySystem.lib;$(SolutionDir)\..\..\dll\$(Configuration)\ZDll.lib;$(SolutionDir)\..\..\lib\$(Configuration)\ButiUtil.lib;$(SolutionDir)Libs\dll\$(Configuration)\ButiRendering.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ButiRendering\ButiRendering.vcxproj">
-      <Project>{7810025d-444e-4198-bf6d-9a295c49fa20}</Project>
-    </ProjectReference>
+    <ClInclude Include="Window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
