--- a/ButiRendering/ButiRendering.vcxproj.filters
+++ b/ButiRendering/ButiRendering.vcxproj.filters
@@ -93,7 +93,7 @@
     <ClInclude Include="..\Header\Resource_Motion.h">
       <Filter>ヘッダー ファイル\Resource</Filter>
     </ClInclude>
-    <ClInclude Include="..\Header\Resource_RealTimeMesh.h">
+    <ClInclude Include="..\Header\Resource_DynamicMesh.h">
       <Filter>ヘッダー ファイル\Resource</Filter>
     </ClInclude>
     <ClInclude Include="..\Header\Resource_Shader.h">
@@ -117,7 +117,7 @@
     <ClInclude Include="..\Header\Rendering_Dx12\Resource_Mesh_Dx12.h">
       <Filter>ヘッダー ファイル\Resource</Filter>
     </ClInclude>
-    <ClInclude Include="..\Header\Rendering_Dx12\Resource_RealTimeMesh_Dx12.h">
+    <ClInclude Include="..\Header\Rendering_Dx12\Resource_DynamicMesh_Dx12.h">
       <Filter>ヘッダー ファイル\Resource</Filter>
     </ClInclude>
     <ClInclude Include="..\Header\Rendering_Dx12\Resource_Shader_Dx12.h">
@@ -209,7 +209,7 @@
     <ClCompile Include="Source\Resource_Motion.cpp">
       <Filter>ソース ファイル\Resource</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Resource_RealTimeMesh.cpp">
+    <ClCompile Include="Source\Resource_DynamicMesh.cpp">
       <Filter>ソース ファイル\Resource</Filter>
     </ClCompile>
     <ClCompile Include="Source\Resource_Shader.cpp">
@@ -230,7 +230,7 @@
     <ClCompile Include="Source\Rendering_Dx12\DescriptorHeapManager.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="Source\Rendering_Dx12\Resource_RealTimeMesh_Dx12.cpp">
+    <ClCompile Include="Source\Rendering_Dx12\Resource_DynamicMesh_Dx12.cpp">
       <Filter>ソース ファイル\Resource</Filter>
     </ClCompile>
     <ClCompile Include="Source\Rendering_Dx12\Resource_Shader_Dx12.cpp">
