--- a/ButiRendering/ButiRendering.vcxproj.filters
+++ b/ButiRendering/ButiRendering.vcxproj.filters
@@ -132,9 +132,6 @@
     <ClInclude Include="..\Header\Rendering_Dx12\Resource_Texture_Dx12_RenderTarget.h">
       <Filter>ヘッダー ファイル\Resource</Filter>
     </ClInclude>
-    <ClInclude Include="..\Header\Rendering_Dx12\CBuffer_Dx12.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="..\Header\Rendering_Dx12\DescriptorHeapManager.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
@@ -148,9 +145,6 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="..\Header\Rendering_Dx12\ShaderHelper_Dx12.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Header\Rendering_Dx12\Camera_Dx12.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="..\Header\Rendering_Dx12\CArrayBuffer_Dx12.h">
@@ -168,9 +162,6 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="Source\Camera.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="Source\Camera_Dx12.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="Source\CBuffer.cpp">
@@ -259,6 +250,9 @@
     </ClCompile>
     <ClCompile Include="Source\DrawData\ModelDrawData_Dx12.cpp">
       <Filter>ソース ファイル\DrawData</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Rendering_Dx12\CBufferUpdater_Dx12.cpp">
+      <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
