--- a/ButiRendering/ButiRendering.vcxproj
+++ b/ButiRendering/ButiRendering.vcxproj
@@ -140,7 +140,7 @@
       <AdditionalDependencies>$(ProjectDir)..\..\..\dll\$(Configuration)\ButiMemorySystem.lib;$(ProjectDir)..\..\..\dll\$(Configuration)\ZDll.lib;$(ProjectDir)..\..\..\dll\$(Configuration)\ButiFont.lib;$(ProjectDir)..\..\..\lib\$(Configuration)\ButiUtil.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy /y /d "$(SolutionDir)Libs\dll\$(Configuration)" "$(SolutionDir)output\$(Configuration)"</Command>
+      <Command>xcopy /y /d "$(SolutionDir)Libs\dll\$(Configuration)\$(ProjectName).dll" "$(SolutionDir)output\$(Configuration)\"</Command>
     </PostBuildEvent>
     <PreBuildEvent>
       <Command>ShaderCompile.bat</Command>
@@ -170,7 +170,7 @@
       <AdditionalDependencies>$(ProjectDir)..\..\..\dll\$(Configuration)\ButiMemorySystem.lib;$(ProjectDir)..\..\..\dll\$(Configuration)\ZDll.lib;$(ProjectDir)..\..\..\dll\$(Configuration)\ButiFont.lib;$(ProjectDir)..\..\..\lib\$(Configuration)\ButiUtil.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy /y /d "$(SolutionDir)Libs\dll\$(Configuration)" "$(SolutionDir)output\$(Configuration)"</Command>
+      <Command>xcopy /y /d "$(SolutionDir)Libs\dll\$(Configuration)\$(ProjectName).dll" "$(SolutionDir)output\$(Configuration)\"</Command>
     </PostBuildEvent>
     <PreBuildEvent>
       <Command>ShaderCompile.bat</Command>
