--- a/ButiRendering/ButiRendering.vcxproj
+++ b/ButiRendering/ButiRendering.vcxproj
@@ -138,7 +138,7 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
-      <AdditionalDependencies>$(ProjectDir)..\..\..\dll\$(Configuration)\ButiMemorySystem.lib;$(ProjectDir)..\..\..\dll\$(Configuration)\ZDll.lib;$(ProjectDir)..\..\..\dll\$(Configuration)\ButiFont.lib;$(ProjectDir)..\..\..\lib\$(Configuration)\ButiUtil.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(ProjectDir)..\..\..\dll\$(Configuration)\ButiMemorySystem.lib;$(ProjectDir)..\..\..\dll\$(Configuration)\ButiTaskSystem.lib;$(ProjectDir)..\..\..\dll\$(Configuration)\ZDll.lib;$(ProjectDir)..\..\..\dll\$(Configuration)\ButiFont.lib;$(ProjectDir)..\..\..\lib\$(Configuration)\ButiUtil.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y /d "$(SolutionDir)Libs\dll\$(Configuration)\$(ProjectName).dll" "$(SolutionDir)output\$(Configuration)\"</Command>
@@ -169,7 +169,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
-      <AdditionalDependencies>$(ProjectDir)..\..\..\dll\$(Configuration)\ButiMemorySystem.lib;$(ProjectDir)..\..\..\dll\$(Configuration)\ZDll.lib;$(ProjectDir)..\..\..\dll\$(Configuration)\ButiFont.lib;$(ProjectDir)..\..\..\lib\$(Configuration)\ButiUtil.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(ProjectDir)..\..\..\dll\$(Configuration)\ButiMemorySystem.lib;$(ProjectDir)..\..\..\dll\$(Configuration)\ButiTaskSystem.lib;$(ProjectDir)..\..\..\dll\$(Configuration)\ZDll.lib;$(ProjectDir)..\..\..\dll\$(Configuration)\ButiFont.lib;$(ProjectDir)..\..\..\lib\$(Configuration)\ButiUtil.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y /d "$(SolutionDir)Libs\dll\$(Configuration)\$(ProjectName).dll" "$(SolutionDir)output\$(Configuration)\"</Command>
